# mipt-comp-grphics-hw

./: CMakeLists.txt  README.md
2nd_hw/: BaseUnit.cpp  BaseUnit.hpp  Camera.cpp  Camera.hpp  OGLstrike.cpp  OGLstrike.hpp  Unit.cpp  Unit.hpp  models.hpp  task.cpp
2nd_hw/shaders/: main.vertexshader  textured.fragmentshader  textured.vertexshader
2nd_hw/textures/: lava.dds
practice/2/: fstT.vertexshader  sndT.vertexshader  task.cpp
practice/3/: fstT.vertexshader  sndT.vertexshader  task.cpp
practice/4/: default.fragmentshader  task.cpp
